--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "clickhouse-connect (>=0.8.18,<0.9.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "ruff (>=0.12.9,<0.13.0)",
-    "sqlfluff (>=3.4.2,<4.0.0)"
+    "sqlfluff (>=3.4.2,<4.0.0)",
+    "numpy (>=2.3.2,<3.0.0)"
 ]
 
 
