--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "ruff (>=0.12.9,<0.13.0)",
     "sqlfluff (>=3.4.2,<4.0.0)",
-    "numpy (>=2.3.2,<3.0.0)"
+    "numpy (>=2.3.2,<3.0.0)",
+    "rapidfuzz (>=3.14.0,<4.0.0)",
+    "pyarrow (>=21.0.0,<22.0.0)",
+    "tabula-py (>=2.10.0,<3.0.0)"
 ]
 
 
